--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "24.2.1",
-    "drizzle-kit": "0.31.4",
+    "drizzle-kit": "^0.18.1",
     "typescript": "5.9.2"
   }
 }
