--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,22 @@
+version: "3.9"
+
 services:
   db:
     image: postgres:17
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: desafio
+      POSTGRES_DB: course_db
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d course_db || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 5s
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
