--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --env-file .env --watch server.ts",
+    "db:seed": "node --env-file .env src/database/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -16,7 +17,6 @@
     "@fastify/swagger": "9.5.1",
     "@fastify/swagger-ui": "5.2.3",
     "@scalar/fastify-api-reference": "1.34.2",
-    "drizzle-orm": "0.44.4",
     "fastify": "5.5.0",
     "fastify-type-provider-zod": "5.0.3",
     "pg": "8.16.3",
@@ -24,8 +24,10 @@
     "zod": "4.0.17"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@types/node": "24.2.1",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.4",
     "typescript": "5.9.2"
   }
 }
