--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
 NODE_ENV=test
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/course_db_test"
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/course_db_test
