--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "drizzle-kit studio",
     "pretest": "dotenv -e .env.test drizzle-kit migrate",
     "test": "dotenv -e .env.test vitest run --coverage",
+        "test:ci": "dotenv -e .env.test drizzle-kit migrate && dotenv -e .env.test vitest run --coverage",
     "env:which:dev": "dotenv -e .env bash -lc 'echo $DATABASE_URL'",
     "env:which:test": "dotenv -e .env.test bash -lc 'echo $DATABASE_URL'"
   },
