--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/course_db"
+JWT_SECRET="XJqJez3NvK2m1QgOjTDYVXHMikzkchTnkXhdwvgrUbM="
