--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:studio": "drizzle-kit studio",
     "pretest": "dotenv -e .env.test drizzle-kit migrate",
     "test": "dotenv -e .env.test vitest run --coverage",
-        "test:ci": "dotenv -e .env.test drizzle-kit migrate && dotenv -e .env.test vitest run --coverage",
+    "test:ci": "dotenv -e .env.test drizzle-kit migrate && dotenv -e .env.test vitest run --coverage",
     "env:which:dev": "dotenv -e .env bash -lc 'echo $DATABASE_URL'",
     "env:which:test": "dotenv -e .env.test bash -lc 'echo $DATABASE_URL'"
   },
@@ -28,12 +28,14 @@
     "argon2": "^0.44.0",
     "fastify": "5.5.0",
     "fastify-type-provider-zod": "5.0.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pino-pretty": "13.1.1",
     "zod": "4.0.17"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.2.1",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
